# mlops-cycle

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  replay_batch.py  simulate_traffic.py
.github/workflows/: ci.yml  drift-check.yml
conf/: config.yaml
conf/model/: age_spline_bmi_linear.yaml  age_spline_bmi_spline.yaml  age_wiggly_spline_bmi_linear.yaml
conf/schema/: default.yaml
conf/serve/: default.yaml
data/: data_drift.csv  data_generating.py  no_drift.csv  reference.csv
docker/: app.Dockerfile  docker-compose.monitoring.yml  mlflow.Dockerfile
docs/adr/: 0001-gam-over-gbdt.md  0002-jsd-over-psi.md  0003-shadow-over-split.md
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: grafana_dashboard.json
multirun/2026-07-06/03-29-41/: multirun.yaml
multirun/2026-07-06/04-02-26/: multirun.yaml
multirun/2026-07-06/13-36-18/: multirun.yaml
multirun/2026-07-06/15-12-41/: multirun.yaml
multirun/2026-07-06/15-17-47/: multirun.yaml
multirun/2026-07-08/13-23-40/: multirun.yaml
outputs/2026-07-06/03-20-26/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-07-06/03-28-34/.hydra/: hydra.yaml
outputs/2026-07-06/03-30-03/.hydra/: hydra.yaml
outputs/2026-07-06/03-30-41/.hydra/: config.yaml  hydra.yaml
outputs/2026-07-06/03-45-03/.hydra/: hydra.yaml
outputs/2026-07-06/03-53-38/.hydra/: config.yaml  hydra.yaml
src/: config.py  helper_functions.py  monitor.py  serve.py  train.py
tests/: test_config.py  test_monitor.py  test_schema.py  test_train.py
(+53 files in other folders)
