[project]
name = "insurance-cost-mlops"
version = "0.1.0"
description = "Interpretable GAM for insurance costs, served and monitored for drift end-to-end."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "mlflow>=3.0,<4.0",
    "evidently>=0.7,<0.8",           # drift API is version-sensitive; keep pinned
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "cloudpickle>=3.0",
    "psycopg2-binary>=2.9",          # mlflow -> postgres backend
    "hydra-core>=1.3.4",
    "loguru>=0.7.3",
    "statsmodels>=0.14.6",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "prometheus-client>=0.25.0",
    "pygam>=0.12.0",
    "requests>=2.34.2",
    "pytest>=9.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",
    "jupyterlab>=4.6.1",
    "ipykernel>=7.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
